test/expected/file-declare_x.out
cdecl> declare x int
                 ^
11: syntax error: "int": "as" expected ("int" is a keyword)
